# liars-dice

./: Anchor.toml  README.md  package-lock.json  package.json
programs/liars-dice/: Cargo.toml
programs/liars-dice/src/: errors.rs  instructions.rs  lib.rs  utils.rs
programs/liars-dice/src/instructions/: create_game.rs  game_loop.rs  join_game.rs  mod.rs  run_game.rs
programs/liars-dice/src/state/: game_state.rs  mod.rs  player.rs
test-helpers/: airdropSol.ts  createGame.ts  pyth_connection.ts
tests/: Cargo.toml  game-creation-tests.ts  game-join-tests.ts  liars-dice.ts  lobby-tests.ts  test-proj.ts
tests/src/: join_game_test.rs  lib.rs
tests/utils/: createGame.ts
