[package]
name = "liars-dice"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "liars_dice"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
pyth-solana-receiver-sdk = "0.6.1"
proc-macro2 = "=1.0.95"


[dev-dependencies]
litesvm = "0.6.1"
tokio = { version = "^1.20", features = ["rt-multi-thread", "macros"] }
