[package]
name = "liars-dice"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "liars_dice"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = "0.31.1"
ephemeral-rollups-sdk = { version = "0.2.5", features = ["anchor"] }
ephemeral-vrf-sdk = { version = "0.2.0", features = ["anchor"] }
pyth-solana-receiver-sdk = "0.6.1"


[dev-dependencies]
